--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,25 @@
+* {
+    background-color: midnightblue;
+    color: white;
+    text-align: center
+}
+
 body {
     font-size: 24px;
     line-height: 1.5;
 }
 
 #timer {
-    font-size: 36px;
+    font-size: 18px;
     position: fixed;
     right: 15px;
+
+}
+
+.button {
+    background-color: white;
+    color: midnightblue;
+    width: 30px;
+    display: block; 
 
 }
